--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,7 +1,5 @@
 <app-nav></app-nav>
 
 <div class="component" style= "margin-top: 200 px;">
-  <ul>
-    <li *ngFor="let user of users"> {{user.id}}-{{user.userName}}</li>
-  </ul>
+  <app-home></app-home>
 </div>
