--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -6,7 +6,7 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         
         
-        <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="loggedIn">
+        <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="accountService.currentUser$ | async">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">Matches</a>
           </li>
@@ -21,7 +21,7 @@
           </li>
         </ul>
         
-        <div class="dropdown" *ngIf="loggedIn" dropdown>
+        <div class="dropdown" *ngIf="accountService.currentUser$ | async" dropdown>
           <a href="" class="dropdown-toogle text light" dropdownToggle>Welcome User</a>
           <div class="dropdown-menu mt-3" *dropdownToggle>
             <a href="" class="dropdown-item">Edit Profile</a>
@@ -31,7 +31,7 @@
         </div>
         
         
-        <form *ngIf="!loggedIn"
+        <form *ngIf="(accountService.currentUser$ | async) === null"
           [hidden]
           #loginForm="ngForm"
           class="d-flex"
