--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-nav></app-nav>
 
 <div class="component" style= "margin-top: 200 px;">
-  <app-home></app-home>
+  <router-outlet></router-outlet>
 </div>
