--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,28 +1,30 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
   <div class="container">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Dating App</a>
+      <a class="navbar-brand" routerLink='/'>Dating App</a>
 
       <div class="collapse navbar-collapse" id="navbarCollapse">
         
         
-        <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="accountService.currentUser$ | async">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Matches</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Lists</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#">Messages</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" (click)="logout()" href="#">Logout</a>
-          </li>
+        <ul class="navbar-nav me-auto mb-2 mb-md-0">
+          <ng-container  *ngIf="accountService.currentUser$ | async" >
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" routerLink='/members' routerLinkActive='active'>Matches</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink='/lists' routerLinkActive='active'>Lists</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" routerLink = '/messages' routerLinkActive='active'>Messages</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" (click)="logout()" routerLink= '/**'>Logout</a>
+            </li>
+          </ng-container>
         </ul>
         
-        <div class="dropdown" *ngIf="accountService.currentUser$ | async" dropdown>
-          <a href="" class="dropdown-toogle text light" dropdownToggle>Welcome User</a>
+        <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
+          <a href="" class="dropdown-toogle text light" dropdownToggle>Welcome User{{user.username | titlecase}}</a>
           <div class="dropdown-menu mt-3" *dropdownToggle>
             <a href="" class="dropdown-item">Edit Profile</a>
             <div class="dropdown-diveder"></div>
@@ -52,7 +54,7 @@
             type="password"
             placeholder="Password"
           />
-          <button class="btn btn-outline-success" type="submit">Login</button>
+          <button class="btn btn-outline" type="submit">Login</button>
         </form>
       </div>
     </div>
