Interceptor-Error-Eklenmesi

--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -21,6 +21,9 @@
               <a class="nav-link" (click)="logout()" routerLink= '/**'>Logout</a>
             </li>
           </ng-container>
+          <li class="nav-item">
+            <a class="nav-link" routerLink= '/errors'>errors</a>
+          </li>
         </ul>
         
         <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
